# AI-Sales-Agent-Workshop

./: .env.example  .gitignore  SETUP.md  WORKSHOP_DAY1_SCRIPT.md  agent.py  cli.py  database.py  main.py  memory.py  pyproject.toml  requirements.txt  tools.py  whatsapp.py
prompts/: system.md
routes/: dashboard.py
templates/: dashboard.html
