[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.29",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.0",
]
